--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-<!-- Your code here -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>My Site Title</title>
+    <link href="style.css" rel="stylesheet" type="text/css">
+</head>
+<body>
+    <ul>
+        <li>"Monstera deliciosa"</li>
+        <li>"Fiddle Leaf Fig"</li>
+        <li>"Pilea"</li>
+        <li>"Golden Pothos"</li>
+        <li>"Peace Lily"</li>
+    </ul>
+</body>
+</html>
